manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: roka0215/my-hello-world:153
        name: my-hello-world
        ports:
        - containerPort: 8080
        resources:
          requests:
           cpu: 50m
           memory: 500Mi
