manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: test
spec:
  rules:
  - host: hello.world.example.com
    http:
      paths:
      - path: /hello-world/
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
